<resources>
    <string name="app_name">The Go Quiz</string>
    <string name="titleBar">Go: The Ancient Game</string>
    <string name="subtitle">Test your knowledge of this simple, infinitely complex game and find out why it is the oldest game in the world still played in its original form.</string>
    <string name="questionOne">1. When did the oldest recorded game of Go occur?</string>
    <string name="questionTwo">2. What country did the game start in?</string>
    <string name="questionThree">3. &#8230;and what is the name of Go in that country today?</string>
    <string name="questionFour">4. What are the dimensions of a full sized Go board?</string>
    <string name="questionFive">5. How many points are there on a board?</string>
    <string name="questionSix">6. It is estimated that there are this many different possible board postions:</string>
    <string name="questionSeven">7. Who played the infamous \'Ear Reddening Move\' against Gennan Inseki in 1846?</string>
    <string name="questionEight">8. What is the name of the first computer program to beat the best Go player in the world?</string>
    <string name="questionNine">9. Finish the quote: "Go is to Chess&#8230;"</string>
    <string name="questionTen">10. Would you like to learn more about how to play Go?</string>
    <string name="learnMore">Learn the basics and play some Go here: http://playgo.to/iwtg/en/</string>
</resources>
