<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.alexs.quizapp.MainActivity">
        <ImageView
            android:contentDescription="A game of Go in progress."
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/a_go_game_short">
            <requestFocus/>
        </ImageView>
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/whiteText"
            android:textSize="24sp"
            android:text="@string/titleBar" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/whiteText"
            android:text="@string/subtitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionOne"/>
        <RadioGroup
            android:id="@+id/answerOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="1996 AD"/>
            <RadioButton
                android:id="@+id/rightOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="250 AD"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="2255 BC"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="1050 AD"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionTwo"/>
        <EditText
            android:id="@+id/answerTwo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:textSize="12sp"
            android:hint="Hint: Somewhere in Asia"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionThree"/>
        <RadioGroup
            android:id="@+id/answerThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Baduk"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Othello"/>
            <RadioButton
                android:id="@+id/rightThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Weiqui"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Monopoly"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionFour"/>
        <RadioGroup
            android:id="@+id/answerFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rightFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="19x19"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="25x25"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="13x13"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="6x6"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionFive"/>
        <EditText
            android:id="@+id/answerFive"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:textSize="12sp"
            android:hint="Hint: Use your answer from #4 for help."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionSix"/>
        <RadioGroup
            android:id="@+id/answerSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightText"
                    android:text="360,000"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightText"
                    android:text="1e5"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightText"
                    android:text="550,000"/>
                <RadioButton
                    android:id="@+id/rightSix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightText"
                    android:text="More than atoms in the universe!"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionSeven"/>
        <RadioGroup
            android:id="@+id/answerSeven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rightSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Shusaku"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Someone else..."/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionEight"/>
        <EditText
            android:id="@+id/answerEight"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:textSize="12sp"
            android:hint="Hint: Their parent company co-wrote this project!"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionNine"/>
        <EditText
            android:id="@+id/answerNine"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:textSize="12sp"
            android:hint="Hint: From a great thriller named Shibumi"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/darkText"
            android:text="@string/questionTen"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/answerTenFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Yes!"/>
            <CheckBox
                android:id="@+id/answerTenSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightText"
                android:text="Double Yes!"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/whiteText"
            android:text="Submit My Answers"
            android:onClick="submitQuiz"/>
    </LinearLayout>
</ScrollView>